# yast-snapper

./: .gitignore  .rubocop.yml  .travis.yml  Dockerfile  MAINTAINER  README.md  VERSION  configure.in.in  yast2-snapper.spec.in
.github/workflows/: ci.yml
agent-snapper/doc/autodocs/: .gitignore
agent-snapper/src/: SnapperAgent.cc  SnapperAgent.h
doc/autodocs/: .gitignore
package/: yast2-snapper.changes  yast2-snapper.spec
src/: Makefile.am  Snapper.ycp  dialogs.ycp  helps.ycp  wizards.ycp
src/clients/: snapper.rb
src/desktop/: org.opensuse.yast.Snapper.desktop  snapper.desktop
src/include/snapper/: dialogs.rb  helps.rb  wizards.rb
src/lib/snapper/: snapshot.rb  snapshot_dbus.rb
src/lib/snapper/clients/: snapper.rb
src/modules/: Snapper.rb  SnapperDbus.rb
test/: Makefile.am  snapper_dbus_escape.rb  snapper_dbus_escape_test.rb  snapper_dbus_test.rb  snapper_dbus_unescape.rb  snapper_dbus_unescape_test.rb  snapper_dialogs_include_test.rb  snapper_string_to_userdata.rb  snapper_string_to_userdata_test.rb  snapper_test.rb  snapper_tree_test.rb  snapper_userdata_to_string_test.rb  snapshot_dbus_test.rb  snapshot_test.rb  spec_helper.rb  test_helper.rb
test/fixtures/: snapper-list.yml  snapper-list.yml2
testsuite/tests/: ReadConfigs.out
