#
# Makefile.am for snapper/test
#

TESTS =									\
	snapper_dbus_escape_test.rb					\
	snapper_dbus_unescape_test.rb					\
	snapper_string_to_userdata_test.rb				\
	snapper_tree_test.rb						\
	snapper_userdata_to_string_test.rb

TEST_EXTENSIONS = .rb
RB_LOG_COMPILER = rspec
VERBOSE = 1
EXTRA_DIST = $(TESTS)

